--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-scanner",
+  "name": "todo-fixme-scanner",
   "version": "1.0.0",
   "description": "A CLI tool to scan for TODO and FIXME comments in your project files.",
   "main": "index.js",
