--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A CLI tool to scan for TODO and FIXME comments in your project files.",
   "main": "index.js",
   "bin": {
-    "todo-scanner": "./index.js"
+    "todo-fixme-scanner": "./index.js"
   },
   "keywords": [
     "todo",
